# pfa

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  template.yaml
.claude/commands/: sync-claude-md.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  rollback.yml
backend/: requirements.txt
backend/src/: __init__.py  auth.py  categorization.py  csv_parser.py  database.py  handler.py  models.py  schema.sql
backend/src/routes/: __init__.py  auth_routes.py  budget_routes.py  category_routes.py  dashboard_routes.py  rule_routes.py  transaction_routes.py
backend/src/utils/: secrets.py
backend/tests/: __init__.py  test_handler.py
docs/: pfa-requirements.md  transaction-categorization-feature.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/css/: styles.css
frontend/js/: api.js  app.js  auth.js  dashboard.js  transactions.js  upload.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  hooks.ts
frontend/src/components/: CategoryDropdown.tsx  ReviewBadge.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/src/types/: index.ts
specs/: CONSTITUTION.md
specs/000-example-feature/: data-model.md  plan.md  spec.md  tasks.md
specs/001-burn-rate-core/: spec.md  tasks.md
specs/001-template-foundation/: plan.md  requirements.md  spec.md  tasks.md
specs/002-pfa-core/: data-model.md  plan.md  spec.md  tasks.md
specs/003-transaction-categorization/: plan.md  spec.md  tasks.md
(+10 files in other folders)
